Criadas a classe e o layout de Register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".HistoricActivity" >
         </activity>
+        <activity android:name=".RegisterActivity" >
+        </activity>
     </application>
 
 </manifest>
